--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -74,7 +74,7 @@
                         <option>US-EAST-1</option>
                     </select>
                 </div>
-                <img src="https://placehold.co/400x100/e2e8f0/475569?text=Visual+Load+Balance+Map">
+                <img src="https://placehold.co/400x100/e2e8f0/475569?text=Visual+Load+Balance+Map" alt="visual-map">
                 <div class="btn btn-primary" onclick="showStep('p', 2)" style="margin-top:10px;">Next Phase</div>
             </div>
             <div id="p-step-2" class="step-panel">
