--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         <h3>Create Service Account</h3>
 
         <div id="sa-step-1" class="step-panel active">
-            <input type="text" id="sa-name" placeholder="Service account name">
-            <input type="text" id="sa-owner" placeholder="Owner team">
+            <input type="text" id="sa-name" placeholder="Service account name" aria-label="service-acc-name">
+            <input type="text" id="sa-owner" placeholder="Owner team" aria-label="service-acc-owner">
             <div class="btn btn-primary" onclick="showStep('sa', 2)">Next</div>
         </div>
 
