--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 <input type="text" id="f-id" value="Admin_99">
             </div>
             <div class="form-group">
-                <label for="f-id">Token</label>
-                <input type="text" id="f-id">
+                <label for="f-token">Token</label>
+                <input type="text" id="f-token">
             </div>
             <button class="btn btn-primary" onclick="finish('Request')">Submit</button>
         </div>
