--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="nav-link" onclick="route('audit', event)">Audit Logs</div>
         </div>
         <div style="padding: 2rem;">
-            <button class="btn" style="background: #1e293b; width: 40px; height: 40px;" onclick="location.reload()">
+            <button class="btn" aria-label="reload" style="background: #1e293b; width: 40px; height: 40px;" onclick="location.reload()">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M23 4v6h-6M1 20v-6h6M3.51 9a9 9 0 0114.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0020.49 15"></path>
                 </svg>
