broken skip link fix

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <a href="#nexus-link" class="skip-link">Skip to Content</a>
+    <a href="#viewport" class="skip-link">Skip to Content</a>
     <div id="app-root">
     <aside>
         <div class="brand">NEXUS_CONTROL</div>
